--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">WifiTimer</string>
+    <string name="app_name">WiFi Timer</string>
     <string name="setup_timer_button_text">Setup timer</string>
 </resources>
